prod/violin-auth-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-auth
  namespace: devops
  labels:
    app: violin-auth
    tagUpdateTime: T1675271598
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-auth
  template:
    metadata:
      labels:
        app: violin-auth
    spec:
      containers:
        - name: violin-auth
          image: ccr.ccs.tencentyun.com/violin/violin-auth:1.1.3
          imagePullPolicy: Always
          args:
            - "--spring.profiles.active=prod"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 300Mi
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
