prod/violin-book-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-book
  namespace: devops
  labels:
    app: violin-book
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-book
  template:
    metadata:
      labels:
        app: violin-book
    spec:
      containers:
      - name: violin-book
        image: ccr.ccs.tencentyun.com/violin/violin-book:v1.02
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: localtime
            mountPath: /etc/localtime
          - name: docs
            mountPath: /docsify/docs/
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: docs
          persistentVolumeClaim:
            claimName: violin-docs-pvc
