prod/violin-onenote-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-onenote
  namespace: devops
  labels:
    app: violin-onenote
    tagUpdateTime: T1675690401
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-onenote
  template:
    metadata:
      labels:
        app: violin-onenote
    spec:
      containers:
        - name: violin-onenote
          image: ccr.ccs.tencentyun.com/violin/violin-onenote:1.0.0
          imagePullPolicy: Always
          args:
            - "--spring.profiles.active=prod"
          resources:
            requests:
              cpu: 50m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 300Mi
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
