prod/violin-retail-home-deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-retail-home
  namespace: devops
  labels:
    app: violin-retail-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-retail-home
  template:
    metadata:
      labels:
        app: violin-retail-home
    spec:
      containers:
        - name: violin-retail-home
          image: ccr.ccs.tencentyun.com/violin/violin-retail-home:0.5
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 150Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
