prod/violin-auth-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-auth-service-prod
  namespace: devops
spec:
  selector:
    app: violin-auth
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
