prod/violin-book-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-book-service-dev
  namespace: devops
spec:
  selector:
    app: violin-book
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
