prod/violin-bookmark-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-bookmark-service-dev
  namespace: devops
spec:
  selector:
    app: violin-bookmark
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8082
