prod/violin-calendar-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-calendar-service-prod
  namespace: devops
spec:
  selector:
    app: violin-calendar
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8085
