prod/violin-docs-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-docs
  namespace: devops
  labels:
    app: violin-docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-docs
  template:
    metadata:
      labels:
        app: violin-docs
    spec:
      containers:
      - name: violin-docs
        image: ccr.ccs.tencentyun.com/violin/violin-docs:v1.00
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        volumeMounts:
          - name: localtime
            mountPath: /etc/localtime
          - name: doc
            mountPath: /docsify/docs/
      imagePullSecrets:
        - name: devops-secret
      volumes:
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: doc
          persistentVolumeClaim:
            claimName: violin-docs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: violin-docs-service-dev
  namespace: devops
spec:
  selector:
    app: violin-docs
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
