prod/violin-home-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-prod
  namespace: devops
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
