prod/violin-mongo-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-mongo-deployment
  namespace: devops
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      nodeName: master
      tolerations:
      - key: node-role.kubernetes.io/master
        operator: Exists
      containers:
      - name: violin-mongo
        image: ccr.ccs.tencentyun.com/violin/violin-mongo:latest
        resources:
          requests:
            memory: "50Mi"
            cpu: "50m"
          limits:
            memory: "100Mi"
            cpu: "100m"
        ports:
        - containerPort: 27017
        volumeMounts: 
          - mountPath: /bitnami/mongodb 
            name: mongodb-volume
      imagePullSecrets:
        - name: dev-key
      volumes:
        - name: mongodb-volume
          hostPath:
            path: /usr/local/kubernetes/mongodb
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
  - port: 27017
    targetPort: 27017
