prod/violin-mysql-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-mysql-deployment
  namespace: devops
  labels:
    app: violin-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-mysql
  template:
    metadata:
      labels:
        app: violin-mysql
    spec:
      nodeName: node1
      imagePullSecrets:
        - name: devops-secret
      containers:
        - name: violin-mysql
          image: ccr.ccs.tencentyun.com/violin/violin-mysql:1.0
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "200Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          volumeMounts:
            - name: mysql-config
              mountPath: "/etc/mysql/conf.d/"
            - name: mysql-pvc
              mountPath: "/data/mysql"
      volumes:
        - name: mysql-config
          configMap:
            name: mysql-cnf
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: violin-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: violin-mysql
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: violin-mysql
  ports:
    - port: 3306
      targetPort: 3306
