prod/violin-onenote-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-onenote-service-dev
  namespace: devops
spec:
  selector:
    app: violin-onenote
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8083
