prod/violin-redis-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: violin-redis
  namespace: devops
  labels:
    app: violin-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: violin-redis
  template:
    metadata:
      labels:
        app: violin-redis
    spec:
      containers:
        - name: violin-redis
          image: ccr.ccs.tencentyun.com/violin/violin-redis:1.0
          ports:
            - containerPort: 6379
          imagePullPolicy: Always
      imagePullSecrets:
        - name: devops-secret
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: devops
spec:
  type: ClusterIP
  selector:
    app: violin-redis
  ports:
    - port: 6379
      targetPort: 6379
