prod/violin-retail-resets-svc-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-resets-svc-prod
  namespace: devops
spec:
  selector:
    app: violin-retail-home
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
