prod/violin-trade-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-trade-service-prod
  namespace: devops
spec:
  selector:
    app: violin-trade
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
