prod/violin-wiki-service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: violin-wiki-service-prod
  namespace: devops
spec:
  selector:
    app: violin-wiki
  # type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
